Update to 1.37. Fixed Configuration loading/saving.